<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.waiki.testui.MainActivity">


    <ImageButton
        android:id="@+id/button_5"
        android:layout_width="87.5dp"

        android:layout_height="500dp"
        android:layout_rowWeight="0.25"
        android:src="@drawable/list_blue"
        android:background="@color/colorWhite"
        android:layout_column="0"
        android:layout_row="1"
        android:contentDescription="@string/viewAll"
       android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/button_1"
        android:layout_width="87.5dp"

        android:layout_height="100dp"
        android:layout_rowWeight="0.25"
        android:src="@drawable/list_blue"
        android:background="@color/colorWhite"
        android:layout_column="0"
        android:layout_row="1"
        android:contentDescription="@string/viewAll"
        android:layout_alignBottom="@id/button_5"/>

    <ImageButton
        android:id="@+id/button_2"
        android:layout_width="87.5dp"
        android:layout_columnWeight="0.25"
        android:layout_height="100dp"
        android:layout_rowWeight="0.25"
        android:src="@drawable/search_blue"
        android:background="@color/colorWhite"
        android:layout_column="1"
        android:layout_row="1"
        android:contentDescription="@string/Search"
        android:layout_toRightOf="@id/button_1"
        android:layout_alignBottom="@id/button_5"/>

    <ImageButton
        android:id="@+id/button_3"
        android:layout_width="87.5dp"
        android:layout_columnWeight="0.25"
        android:layout_height="100dp"
        android:layout_rowWeight="0.25"
        android:layout_column="2"
        android:layout_row="1"
        android:src="@drawable/view_blue"
        android:backgroundTint="@color/colorWhite"
        android:contentDescription="@string/history"
        android:layout_toRightOf="@id/button_2"
        android:layout_alignBottom="@id/button_5"/>

    <ImageButton
        android:id="@+id/button_4"
        android:layout_width="87.5dp"
        android:layout_height="100dp"
        android:layout_rowWeight="0.25"
        android:layout_column="3"
        android:layout_row="1"
        android:layout_columnWeight="0.25"
        android:src="@drawable/profile_blue"
        android:background="@color/colorWhite"
        android:contentDescription="@string/profile"
        android:layout_toRightOf="@id/button_3"
        android:layout_alignBottom="@id/button_5"/>





</RelativeLayout>
